Skip user activation notification when doc or frame is not available.

Change-Id: I4b30c9adb106e85e2e713af0d931f900123885be
Bug: 900198
Reviewed-on: https://chromium-review.googlesource.com/c/1307845
Reviewed-by: Peter Beverloo <peter@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604626}
Former-commit-id: fcf2e2301ba0e4b9cdd6df3946b044c9f7c882dd